store jnlp-path in JNLPRuntime